# rust-upload

./: .env  Cargo.toml
src/: main.rs
src/data_base/: connection.rs  mod.rs
src/data_base/requests/: file.rs  hash.rs  mod.rs
src/server/: mod.rs  routes.rs
src/utils/: deduplication.rs  helps.rs  mod.rs
