[package]
name = "csd-upload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#web server framework
warp = "0.3.2"

#logging
pretty_env_logger = "0.4.0"

#async
tokio = { version = "1.20.0", features = ["full"] }
futures = { version = "0.3", default-features = false }

#serialization
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"

#SQL
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls" , "postgres", "chrono", "json"] }

#hash
#md5 = "0.7.0"
sha2 = "0.10.3"
data-encoding = "2.3.2"

#id generator
uuid = { version = "1.1.2", features = ["v4"] }

#lib for working with bytes
bytes = "1.0"

#This crate allows the creation of client/server multipart streams for use
mpart-async = "0.6.1"

#content-type of recived files
mime = "0.3.16"